--- a/templates/default/change_password.html
+++ b/templates/default/change_password.html
@@ -47,8 +47,12 @@
                         </div>
                     </div>
                     <div class="mb-3">
-                        <button type="submit" class="btn btn-sm btn-primary">{% trans %}Change password{% endtrans %}</button>
-                        <a href="index.php" class="btn btn-sm btn-secondary">{{ 'Cancel'|trans }}</a>
+                        <button type="submit" class="btn btn-sm btn-primary">
+                            <i class="bi bi-key-fill me-1 text-white"></i>{% trans %}Change password{% endtrans %}
+                        </button>
+                        <a href="index.php" class="btn btn-sm btn-secondary">
+                            <i class="bi bi-x-circle me-1 text-white"></i>{{ 'Cancel'|trans }}
+                        </a>
                     </div>
                 </div>
                 
