--- a/templates/default/add_zone_templ_record.html
+++ b/templates/default/add_zone_templ_record.html
@@ -8,78 +8,129 @@
     </ol>
 </nav>
 
-<h5 class="mb-3">{% trans %}Add record to zone template{% endtrans %} "{{ templ_name }}"</h5>
+<!-- Add Record Card -->
+<div class="card shadow-sm mb-4">
+    <div class="card-header py-3">
+        <strong><i class="bi bi-plus-circle me-2"></i>{% trans %}Add record to zone template{% endtrans %}: "{{ templ_name }}"</strong>
+    </div>
+    <div class="card-body">
+        <p class="small text-muted mb-3">{% trans %}Create a new record for this zone template{% endtrans %}</p>
 
-<form class="needs-validation" method="post" novalidate>
-    <input type="hidden" name="_token" value="{{ csrf_token }}">
-    <input type="hidden" name="domain" value="{{ zone_templ_id }}">
-    <table class="table table-striped table-hover table-sm">
-        <tr>
-            <td>{% trans %}Name{% endtrans %}</td>
-            <td>&nbsp;</td>
-            <td>{% trans %}Type{% endtrans %}</td>
-            <td>{% trans %}Content{% endtrans %}</td>
-            <td>{% trans %}Priority{% endtrans %}</td>
-            <td>{% trans %}TTL{% endtrans %}</td>
-        </tr>
-        <tr>
-            <td>
-                <input class="form-control form-control-sm" type="text" name="name" value="{{ name }}" required>
-            </td>
-            <td>IN</td>
-            <td>
-                <select class="form-select form-select-sm" name="type">
-                    {% for record_type in record_types %}
-                    <option value="{{ record_type }}" {% if record_type== type %}selected{% endif %}>{{ record_type }}
-                    </option>
-                    {% endfor %}
-                </select>
-            </td>
-            <td>
-                <input class="form-control form-control-sm" type="text" name="content" value="{{ content }}" required>
-                <div class="invalid-feedback">{% trans %}Provide content for your zone record{% endtrans %}</div>
-            </td>
-            <td><input class="form-control form-control-sm" type="number" name="prio" value="{{ prio }}" min="0"
-                       max="65535" pattern="[0-9]*" required></td>
-            <td><input class="form-control form-control-sm" type="number" name="ttl" value="{{ ttl }}" min="0"
-                       max="2147483647" pattern="[0-9]*" required></td>
-        </tr>
-        <tr>
-            <td colspan="6">
-                <div><input class="btn btn-primary btn-sm" type="submit" name="commit"
-                            value="{% trans %}Add record{% endtrans %}">
+        <form class="needs-validation" method="post" novalidate>
+            <input type="hidden" name="_token" value="{{ csrf_token }}">
+            <input type="hidden" name="domain" value="{{ zone_templ_id }}">
+            
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="mb-3">
+                        <label for="name" class="form-label">{% trans %}Name{% endtrans %}</label>
+                        <input class="form-control form-control-sm" type="text" id="name" name="name" value="{{ name }}" required>
+                        <div class="invalid-feedback">{% trans %}Provide a name for your record{% endtrans %}</div>
+                        <small class="text-muted">{% trans %}Example: [ZONE] for the zone itself, or subdomain.[ZONE] for a subdomain{% endtrans %}</small>
+                    </div>
+                    
+                    <div class="row">
+                        <div class="col-md-4">
+                            <div class="mb-3">
+                                <label for="type" class="form-label">{% trans %}Type{% endtrans %}</label>
+                                <select class="form-select form-select-sm" id="type" name="type">
+                                    {% for record_type in record_types %}
+                                    <option value="{{ record_type }}" {% if record_type == type %}selected{% endif %}>{{ record_type }}</option>
+                                    {% endfor %}
+                                </select>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="mb-3">
+                                <label for="prio" class="form-label">{% trans %}Priority{% endtrans %}</label>
+                                <input class="form-control form-control-sm" type="number" id="prio" name="prio" value="{{ prio }}" min="0" max="65535" pattern="[0-9]*" required>
+                                <div class="invalid-feedback">{% trans %}Valid range: 0-65535{% endtrans %}</div>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="mb-3">
+                                <label for="ttl" class="form-label">{% trans %}TTL{% endtrans %}</label>
+                                <input class="form-control form-control-sm" type="number" id="ttl" name="ttl" value="{{ ttl }}" min="0" max="2147483647" pattern="[0-9]*" required>
+                                <div class="invalid-feedback">{% trans %}Valid range: 0-2147483647{% endtrans %}</div>
+                            </div>
+                        </div>
+                    </div>
+                    
+                    <div class="mb-3">
+                        <label for="content" class="form-label">{% trans %}Content{% endtrans %}</label>
+                        <input class="form-control form-control-sm" type="text" id="content" name="content" value="{{ content }}" required>
+                        <div class="invalid-feedback">{% trans %}Provide content for your zone record{% endtrans %}</div>
+                    </div>
+                    
+                    <div class="mb-3">
+                        <button type="submit" class="btn btn-primary btn-sm" name="commit">
+                            <i class="bi bi-plus-circle me-1 text-white"></i>{% trans %}Add record{% endtrans %}
+                        </button>
+                        <a href="index.php?page=edit_zone_templ&id={{ zone_templ_id }}" class="btn btn-secondary btn-sm">
+                            <i class="bi bi-x-circle me-1 text-white"></i>{% trans %}Cancel{% endtrans %}
+                        </a>
+                    </div>
                 </div>
-            </td>
-        </tr>
-    </table>
-    <table>
-        <tr>
-            <td colspan="6"><b>{% trans %}Hint:{% endtrans %}</b></td>
-        </tr>
-        <tr>
-            <td colspan="6">{% trans %}The following placeholders can be used in template records{% endtrans %}</td>
-        </tr>
-        <tr>
-            <td colspan="6"><br>&nbsp;&nbsp;&nbsp;&nbsp; * [ZONE] - {% trans %}substituted with current zone name{% endtrans %}<br>
-                &nbsp;&nbsp;&nbsp;&nbsp; * [SERIAL] - {% trans %}substituted with current date and 2 numbers{% endtrans %}
-                (YYYYMMDD + 00)<br>
-                &nbsp;&nbsp;&nbsp;&nbsp; * [NS1] - {% trans %}substituted with 1st name server{% endtrans %}<br>
-                &nbsp;&nbsp;&nbsp;&nbsp; * [NS2] - {% trans %}substituted with 2nd name server{% endtrans %}<br>
-                &nbsp;&nbsp;&nbsp;&nbsp; * [NS3] - {% trans %}substituted with 3rd name server{% endtrans %}<br>
-                &nbsp;&nbsp;&nbsp;&nbsp; * [NS4] - {% trans %}substituted with 4th name server{% endtrans %}<br>
-                &nbsp;&nbsp;&nbsp;&nbsp; * [HOSTMASTER] - {% trans %}substituted with hostmaster{% endtrans %}
-            </td>
-        </tr>
-        <tr>
-            <td colspan="6"><br><b>{% trans %}Examples:{% endtrans %}</b></td>
-        </tr>
-        <tr>
-            <td colspan="6">{% trans %}To add a subdomain foo in a zone template you would put foo.[ZONE] into the name field.{% endtrans %}<br>
-                {% trans %}To add a wildcard record put *.[ZONE] in the name field.{% endtrans %}<br>
-                {% trans %}Use just [ZONE] to have the domain itself return a value.{% endtrans %}<br>
-                {% trans %}For the SOA record, place [NS1] [HOSTMASTER] [SERIAL] 28800 7200 604800 86400 in the content field.{% endtrans %}
-            </td>
-        </tr>
-        <tr>
-    </table>
-</form>
+                
+                <div class="col-md-6">
+                    <!-- Information panel on the right side -->
+                    <div class="card border-info">
+                        <div class="card-header bg-info bg-opacity-10 text-info border-info">
+                            <i class="bi bi-info-circle-fill me-2 text-info"></i>{% trans %}Template Placeholders{% endtrans %}
+                        </div>
+                        <div class="card-body">
+                            <div class="table-responsive">
+                                <table class="table table-sm">
+                                    <thead class="table-light">
+                                    <tr>
+                                        <th>{% trans %}Placeholder{% endtrans %}</th>
+                                        <th>{% trans %}Description{% endtrans %}</th>
+                                    </tr>
+                                    </thead>
+                                    <tbody>
+                                    <tr>
+                                        <td><code>[ZONE]</code></td>
+                                        <td>{% trans %}Substituted with current zone name{% endtrans %}</td>
+                                    </tr>
+                                    <tr>
+                                        <td><code>[SERIAL]</code></td>
+                                        <td>{% trans %}Substituted with current date and 2 numbers{% endtrans %} (YYYYMMDD + 00)</td>
+                                    </tr>
+                                    <tr>
+                                        <td><code>[NS1]</code></td>
+                                        <td>{% trans %}Substituted with 1st name server{% endtrans %}</td>
+                                    </tr>
+                                    <tr>
+                                        <td><code>[NS2]</code></td>
+                                        <td>{% trans %}Substituted with 2nd name server{% endtrans %}</td>
+                                    </tr>
+                                    <tr>
+                                        <td><code>[NS3]</code></td>
+                                        <td>{% trans %}Substituted with 3rd name server{% endtrans %}</td>
+                                    </tr>
+                                    <tr>
+                                        <td><code>[NS4]</code></td>
+                                        <td>{% trans %}Substituted with 4th name server{% endtrans %}</td>
+                                    </tr>
+                                    <tr>
+                                        <td><code>[HOSTMASTER]</code></td>
+                                        <td>{% trans %}Substituted with hostmaster{% endtrans %}</td>
+                                    </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                            
+                            <h6 class="mt-3">{% trans %}Examples{% endtrans %}:</h6>
+                            <ul class="small mb-0">
+                                <li>{% trans %}For a subdomain: <code>subdomain.[ZONE]</code>{% endtrans %}</li>
+                                <li>{% trans %}For a wildcard record: <code>*.[ZONE]</code>{% endtrans %}</li>
+                                <li>{% trans %}For the domain itself: <code>[ZONE]</code>{% endtrans %}</li>
+                                <li>{% trans %}For SOA record content: <code>[NS1] [HOSTMASTER] [SERIAL] 28800 7200 604800 86400</code>{% endtrans %}</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </form>
+    </div>
+</div>
