--- a/templates/default/index.html
+++ b/templates/default/index.html
@@ -173,6 +173,24 @@
         </div>
     </div>
     {% endif %}
+    
+    {% if permissions['user_is_ueberuser'] and dblog_use == true %}
+    <div class="col mb-1 card-item">
+        <div class="card h-100 shadow-sm">
+            <div class="card-header text-center bg-transparent border-0 pt-2">
+                <i class="bi bi-journal-text display-4"></i>
+            </div>
+            <div class="card-body d-flex flex-column justify-content-between">
+                <h6 class="card-title text-center text-truncate d-none d-md-block">{% trans %}User Logs{% endtrans %}</h6>
+                <p class="card-text small text-muted text-center d-none d-lg-block">{% trans %}View user activity history{% endtrans %}</p>
+                <a href="index.php?page=list_log_users" class="btn btn-light btn-sm mt-2" data-testid="user-logs-link">
+                    <span class="d-none d-lg-inline">{% trans %}View user logs{% endtrans %}</span>
+                    <span class="d-lg-none">{% trans %}User Logs{% endtrans %}</span>
+                </a>
+            </div>
+        </div>
+    </div>
+    {% endif %}
 
     {% if auth_used != "ldap" %}
     <div class="col mb-1 card-item">
