--- a/templates/default/list_perm_templ.html
+++ b/templates/default/list_perm_templ.html
@@ -6,30 +6,50 @@
     </ol>
 </nav>
 
-<h5 class="mb-3">{% trans %}Permission templates{% endtrans %}</h5>
-<table class="table table-striped table-hover table-sm">
-    <thead>
-    <tr>
-        <th>{% trans %}Name{% endtrans %}</th>
-        <th>{% trans %}Description{% endtrans %}</th>
-        <th>&nbsp;</th>
-    </tr>
-    </thead>
-    <tbody>
-    {% for template in permission_templates %}
-        <tr>
-            <td class="col-sm-2">{{ template['name'] }}</td>
-            <td class="col-sm-3">{{ template['descr'] }}</td>
-            <td>
-                <a class="btn btn-outline-primary btn-sm" href="index.php?page=edit_perm_templ&id={{ template['id'] }}"><i class="bi bi-pencil-square"></i> {% trans %}Edit{% endtrans %}</a>
-                <a class="btn btn-outline-danger btn-sm" href="index.php?page=delete_perm_templ&id={{ template['id'] }}"><i class="bi bi-trash"></i> {% trans %}Delete{% endtrans %}</a>
-        </tr>
-    {% endfor %}
-    </tbody>
-</table>
-
-<div>
-    {% if templ_perm_add %}
-    <a class="btn btn-primary btn-sm" href="index.php?page=add_perm_templ">{% trans %}Add permission template{% endtrans %}</a>
-    {% endif %}
+<div class="card shadow-sm mb-4">
+    <div class="card-header py-3 d-flex justify-content-between align-items-center">
+        <strong><i class="bi bi-shield-lock me-2"></i>{% trans %}Permission Templates{% endtrans %}</strong>
+        {% if templ_perm_add %}
+        <a class="btn btn-primary btn-sm" href="index.php?page=add_perm_templ">
+            <i class="bi bi-plus-circle me-1 text-white"></i>{% trans %}Add permission template{% endtrans %}
+        </a>
+        {% endif %}
+    </div>
+    <div class="card-body p-0">
+        <div class="table-responsive">
+            <table class="table table-striped table-hover table-sm mb-0">
+                <thead class="table-light">
+                <tr>
+                    <th>{% trans %}Name{% endtrans %}</th>
+                    <th>{% trans %}Description{% endtrans %}</th>
+                    <th class="text-end">{% trans %}Actions{% endtrans %}</th>
+                </tr>
+                </thead>
+                <tbody>
+                {% if permission_templates is empty %}
+                <tr>
+                    <td colspan="3" class="text-center py-3">{% trans %}No permission templates found{% endtrans %}</td>
+                </tr>
+                {% else %}
+                {% for template in permission_templates %}
+                <tr>
+                    <td><strong>{{ template['name'] }}</strong></td>
+                    <td>{{ template['descr'] }}</td>
+                    <td class="text-end">
+                        <div class="gap-2">
+                            <a class="btn btn-sm btn-outline-primary" href="index.php?page=edit_perm_templ&id={{ template['id'] }}">
+                                <i class="bi bi-pencil-square text-primary"></i> <span class="d-none d-md-inline text-primary">{% trans %}Edit{% endtrans %}</span>
+                            </a>
+                            <a class="btn btn-sm btn-outline-danger" href="index.php?page=delete_perm_templ&id={{ template['id'] }}">
+                                <i class="bi bi-trash text-danger"></i> <span class="d-none d-md-inline text-danger">{% trans %}Delete{% endtrans %}</span>
+                            </a>
+                        </div>
+                    </td>
+                </tr>
+                {% endfor %}
+                {% endif %}
+                </tbody>
+            </table>
+        </div>
+    </div>
 </div>
